...
                  overlayShape: SliderComponentShape.noOverlay,
                  thumbShape: RoundSliderThumbShape(
                    enabledThumbRadius: _drag == null ? 2 : 5,
                  ),
                ),
                child: Slider(
                  key: const ValueKey('video_progress'),
                  min: 0,
                  max: duration,
                  value: (_drag ?? value.position.inMilliseconds.toDouble())
                      .clamp(0, duration),
                  semanticFormatterCallback: (position) =>
                      '${(position / duration * 100).round()} percent',
...
